# deepface-ray-api

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  run.sh  test_client.py
.cursor/rules/: project-rules.mdc
app/: __init__.py  audit.py  auth.py  crypto.py  errors.py  logcnf.py  main.py  models.py  ray_tasks.py  reliability.py  secheaders.py  security.py  security_headers.py  signing.py  tasks.py  utils.py
