[project]
name = "deepface-ray-api"
version = "1.8.2"
description = "Enterprise-ready facial recognition API with Ray distributed computing"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "fastapi==0.104.1",
  "uvicorn[standard]==0.24.0",
  "ray[default]==2.8.0",
  "redis==5.0.4",
  "deepface==0.0.79",
  "tensorflow-macos==2.15.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "tensorflow==2.15.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
  "opencv-python-headless==4.8.1.78",
  "pillow==10.1.0",
  "requests==2.32.4",
  "python-multipart==0.0.6",
  "clamd==1.0.2",
  "numpy==1.24.3",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.0.1",
  "ruff==0.8.1",
  "celery==5.3.6",
  "kafka-python==2.0.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
